--- a/Ringtones/app/src/main/res/layout/activity_main.xml
+++ b/Ringtones/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.flipboard.bottomsheet.BottomSheetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.kienvu.ringtones.MainActivity">
@@ -9,4 +10,4 @@
         android:id="@+id/ringtone_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</RelativeLayout>
+</com.flipboard.bottomsheet.BottomSheetLayout>
