--- a/Ringtones/app/src/main/res/menu/menu_main.xml
+++ b/Ringtones/app/src/main/res/menu/menu_main.xml
@@ -5,15 +5,5 @@
         android:id="@+id/rate_app"
         android:orderInCategory="100"
         android:title="@string/rate_app"
-        app:showAsAction="collapseActionView" />
-    <item
-        android:id="@+id/share_on_facebook"
-        android:orderInCategory="100"
-        android:title="@string/share_on_facebook"
-        app:showAsAction="collapseActionView" />
-    <item
-        android:id="@+id/share_on_twitter"
-        android:orderInCategory="100"
-        android:title="@string/share_on_twitter"
-        app:showAsAction="collapseActionView" />
+        app:showAsAction="always" />
 </menu>
